force-app/main/default/objects/County__c/fields/Acres__c.field-meta.xml
<CustomField>
    <fullName>Acres__c</fullName>
    <description>Amount of Acres in the County</description>
    <label>Acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>