force-app/main/default/objects/County__c/fields/Ag_District__c.field-meta.xml
<CustomField>
    <fullName>Ag_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ag District is comprised counties

Ag Districts are confined by state lines because they are comprised of counties

One Ag District can have many counties
One State can have many Ag Districts
One Macro Region can have many Ag Districts</description>
    <label>Ag District</label>
    <referenceTo>Ag_District__c</referenceTo>
    <relationshipLabel>Counties</relationshipLabel>
    <relationshipName>Counties</relationshipName>
    <type>Lookup</type>
</CustomField>