force-app/main/default/objects/County__c/fields/Concatenate_County_State__c.field-meta.xml
<CustomField>
    <fullName>Concatenate_County_State__c</fullName>
    <formula>State__r.Name   &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concatenate County State</label>
    <type>Text</type>
</CustomField>