force-app/main/default/objects/County__c/fields/County_FIPS__c.field-meta.xml
<CustomField>
    <fullName>County_FIPS__c</fullName>
    <externalId>true</externalId>
    <label>County FIPS</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>