force-app/main/default/objects/County__c/fields/Macroregion__c.field-meta.xml
<CustomField>
    <fullName>Macroregion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Macroregion</label>
    <referenceTo>Macroregion__c</referenceTo>
    <relationshipLabel>Counties</relationshipLabel>
    <relationshipName>Counties</relationshipName>
    <type>Lookup</type>
</CustomField>