force-app/main/default/objects/County__c/fields/Microregion__c.field-meta.xml
<CustomField>
    <fullName>Microregion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Microregion</label>
    <referenceTo>Microregion__c</referenceTo>
    <relationshipLabel>Counties</relationshipLabel>
    <relationshipName>Counties</relationshipName>
    <type>Lookup</type>
</CustomField>