force-app/main/default/objects/County__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>County_FIPS__c</columns>
    <columns>State__c</columns>
    <columns>Ag_District__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>