force-app/main/default/objects/County__c/listViews/IL.listView-meta.xml
<ListView>
    <fullName>IL</fullName>
    <columns>NAME</columns>
    <columns>County_FIPS__c</columns>
    <columns>State__c</columns>
    <columns>Ag_District__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>ILLINOIS</value>
    </filters>
    <label>IL</label>
</ListView>